# cafe-sensors-applet

./: .build.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  cafe-sensors-applet.pot  configure.ac  git.mk  index.html  makepot  org.cafe.applets.SensorsApplet.cafe-panel-applet.desktop.in.in  org.cafe.panel.applet.SensorsAppletFactory.service.in  org.cafe.sensors-applet.gschema.xml.in  org.cafe.sensors-applet.sensor.gschema.xml.in
.tx/: config
2023-07-20-115704-79066-1@9ed76d0b501d_master/: commitmsg  index.html  report-1191e2.html  report-1e32d3.html  report-48fbd5.html  report-5f1566.html  report-699f6d.html  report-782a54.html  report-8486f5.html  report-8ada2a.html  report-a06a04.html  report-b80c7d.html  report-bdcf14.html  report-bf9f4c.html  report-e082ac.html  report-f0c410.html  report-f7fb7e.html
2023-07-20-115826-8739-cppcheck@9ed76d0b501d_master/: 11.html  output_9ed76d0b501d467faccfeabe22305f1df9d38e2e
2023-07-20-223008-79312-1@13cde5b074ab_debian/: index.html  report-1191e2.html  report-1e32d3.html  report-48fbd5.html  report-5f1566.html  report-699f6d.html  report-782a54.html  report-8486f5.html  report-8ada2a.html  report-a06a04.html  report-b80c7d.html  report-bdcf14.html  report-bf9f4c.html  report-e082ac.html  report-f0c410.html  report-f7fb7e.html
2023-07-20-223226-4393-cppcheck@13cde5b074ab_debian/: 2.html  output_13cde5b074ab78bbbb532da119288c4aa28f814d
2023-07-20-231537-79310-1@57c60d60d4c8_debian/: commitmsg  index.html  report-1191e2.html  report-1e32d3.html  report-48fbd5.html  report-5f1566.html  report-699f6d.html  report-782a54.html  report-8486f5.html  report-8ada2a.html  report-a06a04.html  report-b80c7d.html  report-bdcf14.html  report-bf9f4c.html  report-e082ac.html  report-f0c410.html  report-f7fb7e.html
2023-07-21-005420-81781-1@638c2ae5b2e9_debian/: index.html  report-1191e2.html  (+15 more)
lib/: Makefile.am
pixmaps/: Makefile.am
(+593 files in other folders)
